k8s/kafka/kafka-server1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: kafka-server1
  name: kafka-server1
  namespace: codescu
spec:
  ports:
  - name: "9092"
    port: 9092
    targetPort: 9092
  selector:
    io.kompose.service: kafka-server1
