k8s/kafka/zookeeper-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: zookeeper-server
  name: zookeeper-server
  namespace: codescu
spec:
  ports:
  - name: "2181"
    port: 2181
    targetPort: 2181
  selector:
    io.kompose.service: zookeeper-server
