k8s/kafka/kafka-local-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: codescu
  name: kafka.local
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/kafka.local: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kafka.local: "true"
